Version 2.0
--------------
2011-09-01 erra <erra@ya.ru>
	* support/configure, support/configure.in: amd64 is taken into account
		for libiconv.a; CPPFLAGS override added for IDN test

2011-08-31 erra <erra@ya.ru>
	* common/send.c, common/send_ext.h: export dead_link for s_bsd.c
	* ircd/s_bsd.c: mark link as dead if ECONNRESET occurs; cancelled
		enable_extended_FILE_stdio for amd64 (by denk)

2011-08-30 erra <erra@ya.ru>
	* support/configure, support/configure.in: locale test fixed

2011-08-29 erra <erra@ya.ru>
	* ircd/s_conf.c: DEFAULT_CHARSET assigned for ports with undefined one
	* ircd/s_serv.c: NULL pointer check added in report_listeners
		to avoid SIGSEGV in /stats P with dead port definitions
	* ircd/s_user.c: DupString usage refined
	* support/config.h.dist: DEFAULT_CHARSET added

2011-08-14 erra <erra@ya.ru>
	* rusnet/rusnet.h: rusnet_zmodecheck reintroduced (needed in
		ircd/s_user.c)

2011-08-05 erra <erra@ya.ru>
	* ircd/s_user.c: R-mode check moved up

2011-08-04 erra <erra@ya.ru>
	* common/send.c: conversion buffer size increased for better safety

2011-08-03 erra <erra@ya.ru>
	* ircd/s_misc.c: conv_free_conversion call moved from exit_one_client
		to exit_client under MyConnect(sptr) check to avoid mess

2011-08-02 erra <erra@ya.ru>
	* ircd/list.c: HOLD_ENFORCED_NICKS framing fixed for cptr->held

2011-07-29 erra <erra@ya.ru>
	* common/numeric_def.h, common/struct_def.h, ircd/s_user.c,
		ircd/s_err.c, support/config.h.dist: HOLD_ENFORCED_NICKS
			option added to make nick enforcement configurable

2011-07-28 erra <erra@ya.ru>
	* rusnet/rusnet_cmds.c: replace "translit" with "ascii" for iconv calls

2011-07-26 erra <erra@ya.ru>
	* ircd/s_misc.c: unused libidn support code removed (caused errors)

2011-07-25 erra <erra@ya.ru>
	* ircd/channel.c, ircd/s_user.c: is_chan_anyop fixed

2011-07-24 erra <erra@ya.ru>
	* ircd/channel.c, ircd/hash.c: obsoleted pieces of code cleared

2011-07-23 erra <erra@ya.ru>